--- a/src/main/resources/assets/mysticfields/lang/en_us.json
+++ b/src/main/resources/assets/mysticfields/lang/en_us.json
@@ -1,4 +1,5 @@
 {
-  "item.mysticfields.crystallized_moonlight": "Crystallized Moonlight",
+  "item.mysticfields.crystallized_moonlight": "Purified Crystallized Moonlight",
+  "item.mysticfields.raw_crystallized_moonlight": "Raw Crystallized Moonlight",
   "creativetab.mystic_fields_tab": "Mystic Fields"
 }
